tests/errors/other/test_tc_other_05_for_range_type.pc
#import std.console;
int main() {
    for i in 0.."hello" {
        console.println_int(i);
    }
    return 0;
}
